--- a/index.html
+++ b/index.html
@@ -1,19 +1,62 @@
 <!DOCTYPE html>
-<html>
-<head><title>Fake HR Directory</title></head>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>Curriculum Vitae - Emily Carson</title>
+  <style>
+    body { font-family: Arial, sans-serif; margin: 40px; line-height: 1.6; }
+    h1, h2 { color: #333; }
+    .section { margin-bottom: 30px; }
+  </style>
+</head>
 <body>
-  <h1>Internal Contact Sheet</h1>
-  <p>Name: Alice Johnson<br>
-     Email: alice.johnson@fakecorp.com<br>
-     Phone: (555) 111-2233<br>
-     Department: HR</p>
-  <p>Name: Bob Smith<br>
-     Email: bob.smith@fakecorp.com<br>
-     Phone: (555) 987-6543<br>
-     Department: Engineering</p>
-  <p>Name: Charlie Doe<br>
-     Email: charlie.doe@fakecorp.com<br>
-     Phone: (555) 444-7788<br>
-     Department: Finance</p>
+
+  <h1>Emily Carson</h1>
+  <p><strong>Email:</strong> emily.carson@examplemail.com</p>
+  <p><strong>Phone:</strong> (555) 348-9123</p>
+  <p><strong>Home Address:</strong> 1428 Maple Street, Apt 5B, Springfield, IL 62704</p>
+  <p><strong>Office Address:</strong> 2350 Innovation Dr, Suite 300, Chicago, IL 60616</p>
+
+  <div class="section">
+    <h2>Professional Summary</h2>
+    <p>Experienced data analyst with 5+ years in interpreting and analyzing data to drive successful business solutions. Proficient in Python, SQL, and data visualization tools.</p>
+  </div>
+
+  <div class="section">
+    <h2>Work Experience</h2>
+    <p><strong>Senior Data Analyst</strong><br>
+    FutureMetrics Inc., Chicago, IL<br>
+    January 2021 – Present</p>
+    <ul>
+      <li>Built scalable dashboards using Tableau and Power BI</li>
+      <li>Led a data cleaning initiative that improved accuracy by 25%</li>
+    </ul>
+
+    <p><strong>Data Analyst</strong><br>
+    InsightWare LLC, Springfield, IL<br>
+    June 2018 – December 2020</p>
+    <ul>
+      <li>Managed ETL pipelines and daily reporting tasks</li>
+      <li>Collaborated with product and marketing teams to refine metrics</li>
+    </ul>
+  </div>
+
+  <div class="section">
+    <h2>Education</h2>
+    <p>B.S. in Information Systems<br>
+    University of Illinois at Urbana-Champaign<br>
+    Graduated: 2018</p>
+  </div>
+
+  <div class="section">
+    <h2>Skills</h2>
+    <ul>
+      <li>Python, Pandas, NumPy</li>
+      <li>SQL, PostgreSQL</li>
+      <li>Tableau, Power BI</li>
+      <li>Excel, Git</li>
+    </ul>
+  </div>
+
 </body>
 </html>
