--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
   <h1>Emily Carson</h1>
-  <p><strong>Email:</strong> emily.carson@examplemail.com</p>
+  <p><strong>Email:</strong> emily.carson@gmail.com</p>
   <p><strong>Phone:</strong> (555) 348-9123</p>
   <p><strong>Home Address:</strong> 1428 Maple Street, Apt 5B, Springfield, IL 62704</p>
   <p><strong>Office Address:</strong> 2350 Innovation Dr, Suite 300, Chicago, IL 60616</p>
